# skidl

./: .gitignore  PLANNING_DOC.md  README.rst  SCH_GEN_ISSUE_SUMMARY.md  SHANE_README.md  __init___lib_sklib.py  case.net  cline_task_jan-29-2025_7-00-06-pm.md  cline_task_jan-30-2025_9-52-09-pm.md  collected_code.txt  debug_schematic_generation.py  esp32s3mini.net  example_kicad_project.net  llm_chat_completion_script.py  main.net  main_lib_sklib.py  power2.net  power2_CORRECT_VERSION.kicad_sch  report.txt  resistor_divider.net  resistor_divider.py  resistor_divider_refactored.py  resistor_divider_test.py  sch_gen_kicad8.py  test.py  test_circuits.py
kicad_schematic_parser/: NET_PARSING_IMPROVEMENTS.md  README.md  SKiDL_documentation.md  TODO.md  component_parser.py  component_parser.txt  debug_output.txt  esp32_example_hierarchy_circuit.txt  example_kicad_project_output.txt  hierachy.txt  hierachy_diff.txt  hierarchy.txt  hierarchy_parser.py  kiutils_test.py  labels_testing_output.txt  labels_testing_output_edited.txt  llm_prompt_generator.py  llm_script.py  main.py  net_parsing_test.txt  parse_hierarchy.txt  power2_output.txt  pyproject.toml  query.txt  resistor_divider.py  resistor_divider_output.txt  resistor_divider_output_corrected.txt  skidl_parser.py  skidl_parser_development_plan.md  skidl_parser_plan.md  stm32_output.txt  test_component_parser.py  test_skidl_circuit.py  test_skidl_circuit_CORRECT.py  tests_output.txt  wire_conn_test_output.txt
kicad_schematic_parser/cline_docs/: activeContext.md  componentParsing.md  productContext.md  progress.md  (+3 more)
(+253 files in other folders)
