[project]
name = "kicad-skidl-converter"
version = "0.1.0"
description = "KiCad schematic parser and SKiDL code generator"
dependencies = [
    "skidl",
    "kiutils",
    "pytest"
]

[project.scripts]
schematic2skidl = "skidl_generator.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "kicad_hierarchy_parser",
    "skidl_generator",
]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [
    "src/kicad_hierarchy_parser/tests",
]
